--- a/templates/default/temp.properties.erb
+++ b/templates/default/temp.properties.erb
@@ -5,7 +5,7 @@ idp.signing.key= %{idp.home}/credentials/idp.key
 idp.signing.cert= %{idp.home}/credentials/idp.crt
 idp.encryption.key= %{idp.home}/credentials/idp.key
 idp.encryption.cert= %{idp.home}/credentials/idp.crt
-idp.entityID= https://$SVCNAME/idp/shibboleth
+idp.entityID= https://<%= node.shibboleth.idp.svcname %>/idp/shibboleth
 idp.scope= $ADJDFLT
 idp.consent.StorageService= shibboleth.JPAStorageService
 idp.consent.userStorageKey= shibboleth.consent.AttributeConsentStorageKey
